<resources>
    <string name="app_name">Popular Movies</string>
    <string name="top_rated">top_rated</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_sort_order_default">popular</string>
    <string name="pref_sort_order_key">sort_order</string>
    <string name="pref_sort_order">Sort order</string>
    <string-array name="pref_sort_order_list">
        <item>Most popular</item>
        <item>Top rated</item>
    </string-array>

    <string-array name="pref_sort_order_list_key">
        <item>popular</item>
        <item>top_rated</item>
    </string-array>
    <string name="title_activity_detail">Details</string>

    <string name="title_placeholder">Title placeholder</string>
    <string name="user_rating_placeholder">User rating placeholder</string>
    <string name="release_date_placeholder">Release date placeholder</string>
    <string name="overview_placeholder">Overview placeholder</string>
    <string name="user_rating">User rating: %s</string>
    <string name="release_date">Release date: %s</string>
    <string name="detail_image_desc">Movie poster</string>
</resources>