<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="it.soepel.popularmovies.DetailActivityFragment"
        tools:showIn="@layout/activity_detail">
        <TextView
            android:text="@string/title_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:typeface="normal" />

        <TextView
            android:text="@string/user_rating_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_rating"
            android:textStyle="bold"
            android:textSize="16sp"
            android:typeface="normal"
            android:layout_below="@+id/text_title"/>

        <TextView
            android:text="@string/release_date_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_release_date"
            android:textStyle="bold"
            android:textSize="16sp"
            android:typeface="normal"
            android:layout_below="@+id/text_user_rating"/>

        <TextView
            android:text="@string/overview_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_overview"
            android:textSize="16sp"
            android:typeface="normal"
            android:layout_below="@+id/text_release_date"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/detail_image"
            android:contentDescription="@string/detail_image_desc"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_below="@id/text_overview"/>

</RelativeLayout>
</ScrollView>
